--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -18,13 +18,18 @@
       <%= f.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
       <%= f.text_field :recipe_name %>
+    <%= f.nested_fields_for :ingredients, wrapper_tag: :p do |f| %>
     <h4>材料</h4>
-      <%= f.text_field :ingredients %>
+      <p><%= f.text_field :ingredients %>
+      <%= f.remove_nested_fields_link 'Delete', class: 'btn btn-danger', role: 'button' %>
+      <%= f.add_nested_fields_link :ingredients, 'Add new', class: 'btn btn-primary', role: 'button' %></p>
+     <% end %>
     <h4>作り方</h4>
-      <%= f.text_area :caption %>
+      <p><%= f.text_area :caption %></p>
       <%= f.submit '投稿' %>
   <% end %>
+
   </div>
-  <div class = "col-md-3"> </div>
+  <div class = "col-md-3"></div>
 </div>
 </div>
