--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -10,9 +10,9 @@
       <p><%= form.text_field :recipe_name %></p>
     <h4>材料</h4>
       <div id="ingredient-forms">
-        <%= form.fields_for :ingredients do |ingredient| %>
-          <% render 'ingredient_fields', f: ingredient %>
-        <% end %>
+        <%#= form.fields_for :ingredients do |ingredient| %>
+          <%# render 'ingredient_fields', f: ingredient %>
+        <%# end %>
       </div>
 
   <div class="links">
